<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--General-->
    <string name="app_name">DISO Koala</string>
    <string name="name">Nombre</string>
    <string name="btn_ok">Aceptar</string>
    <string name="btn_search">Buscar</string>
    <string name="btn_add">+</string>
    <string name="payment_types_extra">Todas</string>
    <!--DataBase-->
    <integer name="db_version">1</integer>
    <!--Home-->
    <string name="title_home">¿Qué desea hacer?</string>
    <string name="btn_sale">Vender</string>
    <string name="btn_sale_list">Ver Ventas</string>
    <string name="btn_products">Ver Productos</string>
    <string name="btn_add_product">Agregar Producto</string>
    <string name="btn_customers">Ver Clientes</string>
    <string name="btn_add_customer">Agregar Cliente</string>
    <!--Add/Edit Product-->
    <string name="title_product">Información Producto</string>
    <string name="txt_product_price">Precio</string>
    <string name="txt_product_description">Descripción</string>
    <string name="txt_barcode">Código</string>
    <string name="error_message_product">Debe escribir el nombre y el precio</string>
    <!--Sale-->
    <string name="title_sale">Venta</string>
    <string name="add_customer">+ Cliente</string>
    <string name="add_product">+ Producto</string>
    <string name="save_sale">Guardar</string>
    <string name="text_customer">Cliente:</string>
    <string name="product_price">Precio</string>
    <string name="total_sale">Total:</string>
    <string name="currency_symbol">$</string>
    <string name="product_delete_title">Producto</string>
    <string name="product_delete_message">¿Desea eliminar el producto?</string>
    <string name="product_delete_yes">Si</string>
    <string name="product_delete_no">No</string>
    <string name="save_sale_title">Guardar Venta</string>
    <string name="save_sale_error_message">Debe seleccionar el cliente y al menos un producto</string>
    <string name="save_sale_ok">Aceptar</string>
    <!--Product List-->
    <string name="title_product_list">Lista de Productos</string>
    <!--Customer-->
    <string name="title_customer">Información Cliente</string>
    <string name="error_message_customer">Debe escribir el nombre</string>
    <string name="customer_identification">Cédula</string>
    <!--Customer List-->
    <string name="title_customer_list">Lista de Clientes</string>
    <!--Sale List-->
    <string name="title_sale_list">Ver Ventas</string>
    <string name="txt_date">Fecha</string>
    <string name="sale_payment_type_question">¿Pagó?</string>
    <string name="sale_payment_type_yes">Si</string>
    <string name="sale_payment_type_no">No</string>
</resources>
