<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:textSize="30sp" />

    <Button
            android:id="@+id/btnSale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sale" />

    <Button
            android:id="@+id/btnProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_products" />

    <Button
            android:id="@+id/btnCustomerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_customers" />
</LinearLayout>

