<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="8sp"
              android:orientation="horizontal" >

    <TextView
            android:id="@+id/lblCustomerName"
            android:layout_width="0dp"
            android:layout_weight=".55"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp" />

    <ToggleButton
            android:id="@+id/tbPaymentType"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:textOn="@string/sale_payment_type_yes"
            android:textOff="@string/sale_payment_type_no"
            android:focusable="false"
            />

    <TextView
            android:id="@+id/lblSaleTotal"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textSize="20sp"
            android:gravity="right"/>

</LinearLayout>