<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product"
            android:textSize="20sp" />

    <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_margin="8sp" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15sp" />

        <EditText
                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_product_price"
                android:textSize="15sp" />

        <EditText
                android:id="@+id/txtProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_barcode"
                android:textSize="15sp" />

        <EditText
                android:id="@+id/txtProductBarCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_product_description"
                android:textSize="15sp"
                android:layout_columnSpan="2" />

        <EditText
                android:id="@+id/txtProductDescription"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:inputType="text"
                android:layout_columnSpan="2" />

    </GridLayout>

    <TextView
            android:id="@+id/lblProductError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message_product"
            android:background="#FC0505"
            android:visibility="invisible"/>

    <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok" />
</LinearLayout>