<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_sale"
            android:textSize="20sp" />

    <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp" >

        <TableRow>
            <Button
                    android:id="@+id/btnAddCustomer"
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="wrap_content"
                    android:text="@string/add_customer" />

            <Button
                    android:id="@+id/btnAddProduct"
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="wrap_content"
                    android:text="@string/add_product" />
        </TableRow>

    </TableLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_customer"
            android:layout_marginLeft="8sp" />

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_sale"
                android:textSize="20sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textSize="25sp"
                android:padding="5sp"
                android:layout_alignParentRight="true"
                android:background="#FC0505" />

    </RelativeLayout>

    <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:layout_margin="8sp" >

        <TableRow>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="15sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_value"
                    android:textSize="15sp" />

        </TableRow>

    </TableLayout>
</LinearLayout>